--- a/css/styles.css
+++ b/css/styles.css
@@ -127,20 +127,18 @@ list-style: none;
 }
 .footer-desc{
     font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.02em;
     color: #F4F4FD;
 }
-.filter1 {background: #404BBF;
+.filter:hover .filter:focus {background: #404BBF;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 2px 1px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     width: 69px;
     height: 48px;}
-.filter2{
+.filter{
     box-sizing: border-box;
     width: 116px;
     height: 48px;
