--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,12 @@
     text-decoration: none;
     background-color: #FFFFFF}
 
-.header1{line-height: 1.07;
+.header-one{line-height: 1.07;
     font-style: normal;
     font-weight: 700;
     font-size: 56px;
     letter-spacing: 0.02em;
+    text-align: center;
     color: #FFFFFF;}
 .logo{
     font-family: 'Raleway', sans-serif;
@@ -20,7 +21,7 @@
     text-transform: uppercase;
     text-decoration: none;
     color: #4d5ae5;}
-.logo1 {color: #2e2f42}
+.logo-one {color: #2e2f42}
 .nav-link {
     font-weight: 500;
     font-size: 16px;
@@ -54,7 +55,7 @@
     color: #404bbf;
 }
 
-.button {background: #4D5AE5;
+.button {background-color: #4D5AE5;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -62,7 +63,7 @@
     letter-spacing: 0.04em;
     color: #FFFFFF;
     font-family: "Roboto", sans-serif;
-    cursor: pointer_
+    cursor: pointer;
     }
 .button:focus{color:#404BBF;}
 .button:hover{
@@ -71,7 +72,7 @@
 .principlesoverall {
     list-style: none    
 }
-.header3 {
+.header-three {
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -86,7 +87,7 @@
         letter-spacing: 0.02em;
         color: #434455;
 }     
-.header2 {
+.header-two {
     font-style: normal;
     font-weight: 700;
     font-size: 36px;
@@ -94,17 +95,9 @@
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2E2F42;}
-.pic_list {
+.pic-list {
     list-style: none;
 }
-.header3{
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    color: #2E2F42
-}
-
 .teamjob {
     font-style: normal;
     font-weight: 400;
@@ -124,7 +117,7 @@
      }
 .link {text-decoration: none;}
 .list {list-style: none;}
-.section1 {background-color:#2e2f42;}
+.section-one {background-color:#2e2f42;}
 
 
 
