--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@
 .link {text-decoration: none;}
 .list {list-style: none;}
 .section-one {background-color:#2e2f42;}
-
+.footer{background-color:#2e2f42;}
 
 
 
