--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-:root {}
-
-
 :root {--primary-brand-color: #4D5AE5;
        --pressed-state: #404BBF;
        --navy-blue: #2e2f42;
@@ -17,7 +14,8 @@
     font-size: 56px;
     letter-spacing: 0.02em;
     text-align: center;
-    color:var();}
+    color:var();
+   }
 .logo{
     font-family: 'Raleway', sans-serif;
     font-style: normal;
