--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
     font-size: 56px;
     letter-spacing: 0.02em;
     text-align: center;
-    color:var();
+    color: #ffffff;
    }
 .logo{
     font-family: 'Raleway', sans-serif;
