--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,35 @@
         text-decoration: none;
         background-color: #FFFFFF;
        }
+.container {width: 1158px;
+            margin: 0 auto;
+            padding: 0 15px;}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #E7E9FC;
+    margin-top: 24px;
+        
+}
+.nav{display: flex;
+     align-items: center;}
+.logo-nav-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;  
+}
+.contact-container {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    
+    
+}
+.list-container {
+    display: flex;
+}
 
 .header-one{line-height: 1.07;
     font-style: normal;
@@ -15,6 +44,10 @@
     letter-spacing: 0.02em;
     text-align: center;
     color: #ffffff;
+    height: auto;
+    width: auto;
+width: 507px;
+    margin: 0 auto 48px;
    }
 .logo{
     font-family: 'Raleway', sans-serif;
@@ -25,7 +58,8 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     text-decoration: none;
-    color: #4d5ae5;}
+    color: #4d5ae5;
+    margin-right: 76px;}
 .logo-one {color: #2e2f42}
 .logo-two {color: #f4f4fd}
 .nav-link {
@@ -34,6 +68,7 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-right: 40px;
     
 }
 .nav:focus {color: #404bbf;}
@@ -47,7 +82,8 @@
     line-height: 24px;
     letter-spacing: 0.02em;
     color: #434455;
-    text-decoration: none;}
+    text-decoration: none;
+    margin-right: 40px;}
 
 .nav{color:#2e2f42;
     font-weight: 500;
@@ -145,7 +181,13 @@
 }
 .link {text-decoration: none;}
 .list {list-style: none;}
-.section-one {background-color:#2e2f42;}
+.section-one {background-color:#2e2f42;
+            width: 1440px;
+                height: 600px;
+                left: 0px;
+                top: 72px;
+                text-align: center;
+                }
 .footer{background-color:#2e2f42;}
 
 
